--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,9 +1,13 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  width:100%;
+  height: auto;
+  min-height: 100%;
+  padding: 0;
+  margin: 0;
+  display: flex;
 }
 
 a {
@@ -24,3 +28,13 @@ a {
     background: black;
   }
 }
+
+div#__next {
+  display: flex;
+  flex: 1;
+  flex-direction: column
+}
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
